--- a/posts/使用 gghighlight 制图/index.qmd
+++ b/posts/使用 gghighlight 制图/index.qmd
@@ -1,7 +1,8 @@
 ---
 title: "使用 gghighlight 制图"
+author: "Boyce"
 categories: [R, ggplot2]
-date: '2023/08/06'
+date: "2023/08/06"
 execute:
   warning: false
 ---
@@ -138,7 +139,7 @@ jisu_apps_long %>%
   labs(y = "月活（万人）")
 ```
 
-## 参考资料
+## 相关资源
 
 -   [Introduction to gghighlight](https://cran.r-project.org/web/packages/gghighlight/vignettes/gghighlight.html)
 
