--- a/posts/在 Github 上部署 Quarto 的静态网页/index.qmd
+++ b/posts/在 Github 上部署 Quarto 的静态网页/index.qmd
@@ -1,11 +1,11 @@
 ---
 title: "在 Github 上部署 Quarto 的静态网页"
+author: "Boyce"
 date: "2023/03/05"
 categories: ['Github', 'Quarto']
 ---
 
 简单记录一下，如何在 Github 上部署 Quarto 的静态网页。
-
 
 ## 确保 Github 和本机电脑已关联
 
@@ -21,14 +21,13 @@ categories: ['Github', 'Quarto']
 
 打开 Github，进入 `Settings - SSH and GPG keys` 页面（或者直接输入 <https://github.com/settings/keys>网址），点击 `New SSH key`，将之前复制的公钥粘贴进去。
 
-
 ## 在本地配置 Quarto 项目文件夹
 
 ### 配置 Quarto 项目文件夹
 
 在 `_quarto.yml` 文件中写入 `output-dir: docs`，渲染后会生成 `docs` 目录，里面就是将要部署的静态网页。
 
-```{{yaml}}
+``` {{yaml}}
 project:
   type: website
   output-dir: docs
@@ -42,7 +41,6 @@ project:
 
 新建 `.gitignore` 文件，在文件中写入 `*.csv` 和 `*.xlsx`，表示忽略数据源文件；再写入 `_site/` 忽略本地调试时生成的文件。
 
-
 ## 在 Github 新建项目，并关联本地库和远程库
 
 ### 在 Github 新建项目
@@ -53,7 +51,7 @@ project:
 
 使用下列命令关联本地库和远程库，并将本地博客内容推送到 Github 上：
 
-```{{git}}
+``` {{git}}
 git remote add origin git@github.com:whuhzx/QuartoBlog.git
 git branch -M main
 git push -u origin main
@@ -69,7 +67,6 @@ git push -u origin main
 
 到这里，已可以在 [https://whuhzx.github.io/QuartoBlog](https://whuhzx.github.io/QuartoBlog/) 页面上看到内容，静态网站已部署成功。
 
-
 ## 更新博客内容
 
 后续更新博客内容时，可使用下列 Git 常用命令：
@@ -82,9 +79,8 @@ git push -u origin main
 
 4、使用 `git push -u origin main` 将新版本推送到 Github 上
 
-
 ## 相关资源
 
-- [Youtube: Publishing a Quarto website through GitHub Pages](https://www.youtube.com/watch?v=uimdXPZc40I&list=PLkrJrLs7xfbXcEKhTCKRSr2VXH4yiBeXo&index=6)
+-   [Youtube: Publishing a Quarto website through GitHub Pages](https://www.youtube.com/watch?v=uimdXPZc40I&list=PLkrJrLs7xfbXcEKhTCKRSr2VXH4yiBeXo&index=6)
 
-- [Quarto: GitHub Pages](https://quarto.org/docs/publishing/github-pages.html)
+-   [Quarto: GitHub Pages](https://quarto.org/docs/publishing/github-pages.html)
