--- a/posts/利用 ChatGPT 编写简单 R 包/index.qmd
+++ b/posts/利用 ChatGPT 编写简单 R 包/index.qmd
@@ -9,22 +9,22 @@ execute:
 
 ## 背景介绍
 
-很久之前就想创建一个R包，便于在做数据分析的时候根据个人需求复用函数，但因为觉得相关文档太复杂而放弃了。
+很久之前就想创建一个 R 包，便于在做数据分析的时候根据个人需求复用函数，但因为觉得相关文档太复杂而放弃了。
 
-这次试了试用ChatGPT来帮助编写，发现过程还是比较简单的。虽然也花时间扫了一遍Hadley Wickham编写的[《R Package》](https://r-pkgs.org/)，但是有ChatGPT的帮助，能够对书中的内容和底层的机制有更清楚地了解。
+这次试了试用ChatGPT来帮助编写，发现过程还是比较简单的。虽然也花时间扫了一遍 Hadley Wickham 编写的[《R Package》](https://r-pkgs.org/)，但是有 ChatGPT 的帮助，能够对书中的内容和底层的机制有更清楚地了解。
 
 这里简单记录一下过程。为了方便起见，编写的R包里只有一个函数。
 
 ## 准备
 
-事先需要安装两个服务于R包开发的package，分别是`devtools`和`roxygen2`，后者主要用于自动生成包的帮助文档。
+事先需要安装两个服务于R包开发的 package，分别是 `devtools` 和 `roxygen2`，后者主要用于自动生成包的帮助文档。
 
 ```{r}
 library(devtools)
 library(roxygen2)
 ```
 
-在Rstudio中新建项目，并选择`R Package`，就会自动生成一个工程文件夹。文件目录大致如下：
+在 RStudio 中新建项目，并选择 `R Package`，就会自动生成一个工程文件夹。文件目录大致如下：
 
 ```{default}
 myutils/
@@ -50,11 +50,11 @@ myutils/
 |-- LICENSE
 ```
 
-## 填写DESCRIPTION文件
+## 填写 DESCRIPTION 文件
 
-在DESCRIPTION文件中填入包的基本信息。
+在 DESCRIPTION 文件中填入包的基本信息。
 
-如果R包需要引入外部package，需要在文件中加入Imports依赖，这里我们编写的函数需要引入tidyverse和tidytext两个包。
+如果R包需要引入外部 package，需要在文件中加入 Imports 依赖，这里我们编写的函数需要引入 tidyverse 和 tidytext 两个包。
 
 ```{default}
 Package: myutils
@@ -67,7 +67,7 @@ Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: What license is it under?
 Encoding: UTF-8
-LazyData: true # 包中如果含有数据集，true表示library()不加载数据集，使用到数据集时才加载
+LazyData: true # 包中如果含有数据集，true 表示 library() 不加载数据集，使用到数据集时才加载
 Imports: 
     tidyverse,
     tidytext
@@ -75,11 +75,11 @@ Imports:
 
 ## 添加函数
 
-这里添加一个我常使用的计算TGI的函数`compute_tgi_top_n`。
+这里添加一个我常使用的计算TGI的函数 `compute_tgi_top_n`。
 
-`#'`后面填上函数的介绍，`#' @param`后面则是每个参数的含义，后续roxygen2会根据注释在R文件中自动生成帮助文件。
+`#'` 后面填上函数的介绍，`#' @param` 后面则是每个参数的含义，后续 roxygen2 会根据注释在R文件中自动生成帮助文件。
 
-`#' @export`表示这个函数可以被外部调用，如果不加入这个注释，表明只供内部使用，外部使用者在`library(myutils)`加载包后无法使用该函数。
+`#' @export` 表示这个函数可以被外部调用，如果不加入这个注释，表明只供内部使用，外部使用者在 `library(myutils)` 加载包后无法使用该函数。
 
 ```{r}
 #' Compute dataset TGI
@@ -116,20 +116,20 @@ compute_tgi_top_n <- function(x, target, category, tgi_value, top_number = 10){
 
 ## 添加数据集
 
-如果要在开发的包中加入固定数据集以供后续载入调用，可以将数据集放置在data目录下。
+如果要在开发的包中加入固定数据集以供后续载入调用，可以将数据集放置在 `/data` 目录下。
 
-根据[《R Pacakge》](https://r-pkgs.org/data.html)一书，数据集的最佳保存格式为`.rda`。可以使用`save(my_data, file = "my_data.rda")`将数据集保存为该格式，或者使用`usethis::use_data(my_data)`自动保存。
+根据[《R Pacakge》](https://r-pkgs.org/data.html)一书，数据集的最佳保存格式为 `.rda`。可以使用 `save(my_data, file = "my_data.rda")` 将数据集保存为该格式，或者使用 `usethis::use_data(my_data)` 自动保存。
 
 ## 生成文档
 
-执行`roxygenise()`后，会在man目录下生成一个名为`compute_tgi_top_n.Rmd`的文件，里面是该函数的帮助文档。
+执行 `roxygenise()` 后，会在 `/man` 目录下生成一个名为`compute_tgi_top_n.Rmd` 的文件，里面是该函数的帮助文档。
 
 ```{r}
 setwd("path_to_myutils")  # 将包的项目路径设置为工作目录
 roxygen2::roxygenise()
 ```
 
-执行`roxygenise()`后发生了什么？以下是ChatGPT给出的回答。
+执行 `roxygenise()` 后发生了什么？以下是 ChatGPT 给出的回答。
 
 ```{markdown}
 #| code-overflow: wrap
@@ -146,13 +146,13 @@ roxygen2::roxygenise()
 
 ## 将包安装到本地库中
 
-使用devtools包内置的`install()`函数，就能够将包安装到本地库中，方便后续直接用`library()`调用。
+使用 devtools 包内置的 `install()` 函数，就能够将包安装到本地库中，方便后续直接用 `library()` 调用。
 
 ```{r}
 devtools::install("myutils")
 ```
 
-执行`install()`后发生了什么？ChatGPT给出了如下答案，有助于理解包安装背后的机制。
+执行 `install()` 后发生了什么？ChatGPT 给出了如下答案，有助于理解包安装背后的机制。
 
 ```{markdown}
 #| code-overflow: wrap
@@ -169,7 +169,7 @@ devtools::install("myutils")
 - 二进制包：在某些系统上，例如Windows，install()可能还会为你的包创建一个二进制版本，这样在未来安装包时可以更快。
 ```
 
-接下来就可以在本地加载`library(myutils)`后调用`compute_tgi_top_n()`函数了。也可以通过`?compute_tgi_top_n`来查看帮助文档。
+接下来就可以在本地加载 `library(myutils)` 后调用 `compute_tgi_top_n()` 函数了。也可以通过 `?compute_tgi_top_n` 来查看帮助文档。
 
 ## 将包上传到Github上
 
@@ -181,26 +181,26 @@ git add .
 git commit -m "first package version"
 ```
 
-在个人Github主页上新建一个库。然后，将本地库和远程库建立关联。
+在个人 Github 主页上新建一个库。然后，将本地库和远程库建立关联。
 
 ```{bash}
 git remote add origin git@github.com:your_username/myutils.git
 
-# 若显示远程库已存在，则加上set-url更新一下
+# 若显示远程库已存在，则加上 set-url 更新一下
 git remote set-url origin git@github.com:your_username/myutils.git
 ```
 
 将本地库推送到Github上。
 
 ```{bash}
-# 重命名当前活动分支为main
+# 重命名当前活动分支为 main
 git branch -M main
 
-# 将main分支推送到名为origin的远程仓库，并设置上游追踪关系
+# 将main分支推送到名为 origin 的远程仓库，并设置上游追踪关系
 git push -u origin main
 ```
 
-推送完成，之后可以在任何电脑上使用`install_github()`命令来安装这个R包啦。
+推送完成，之后可以在任何电脑上使用 `install_github()` 命令来安装这个R包啦。
 
 ```{r}
 devtools::install_github("your_username/myutils")
